--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Juan Carlos Londoño">
     <title>Hoja de Vida Juan Carlos</title>
   </head>
-  <body>
+ <body>
     <header>
       <svg width="200" height="150" viewport="0  0 150 150">
         <image xlink:href="img/logo_juan.svg" width="200px" height="200px" x="0" y="0"</image>
@@ -19,24 +19,25 @@
       <h3>Nombre: Juan Carlos Londoño Blandón</h3>
       <h3>Fecha de Nacimiento: Manizales - Caldas, 25 de Octubre de 1964</h3>
    </header>
-    <p> <a href="index.html">Inicio</a> - <a href="educacion.html">Educación</a> - <a href="experiencia.html">Experiencia</a></p>
-     </br>
-   <h2>Información Personal</h2>
+    <p><a href="index.html">Inicio</a> - <a href="educacion.html">Educación</a> - <a href="experiencia.html">Experiencia</a>
+    </p>
+      </br>
+     <h2>Información Personal</h2>
     <p><img src="img/perfil_juan.png" alt="fotoperfil_juan" title="Foto perfil Juan Carlos"></p>
-     </br>
+      </br>
      <h3>Perfil</h3>
-    <p>Me concidero una persona seria y responsable. Me gusta mucho el continuo aprendisaje porque esto me ayuda
-    a superar mis metas tanto laborales como personales. En este momento me encuentro en búsqueda de empleo
-  en el sector del <strong>Desarrolo y diseño Web</strong>. Tengo experiencia en el caso del segundo y estoy reforzando mis conocimientos
-de Desarrolo. También me desempeño en el campo del <strong>Diseño Web y diseño Gráfico</strong>. En la actualidad estoy haciendo el curso
- de Desarrollo Web con <em>Next U</em>. Tengo disponibilidad total .</p>
- <h4>Idiomas</h4>
- <ul>
-   <li>Español: Hablo, comprendo y escribo</li>
-   <li>Inglés: Comprendo </li>
- </ul>
- <footer>Derechos Reservados - Juan Carlos Londoño Blandón -  Calle 99 35 a 02 Manizales ( Caldas ) -  Tel 300 203 0172 - (036) 879 9951 - Email: lonblan6@gmail.com</footer>
-
-
-  </body>
+      <p>Me concidero una persona seria y responsable. Me gusta mucho el continuo aprendisaje porque esto me ayuda
+       a superar mis metas tanto laborales como personales. En este momento me encuentro en búsqueda de empleo
+       en el sector del <strong>Desarrolo y diseño Web</strong>. Tengo experiencia en el caso del segundo y estoy reforzando mis conocimientos
+       de Desarrolo. También me desempeño en el campo del <strong>Diseño Web y diseño Gráfico</strong>. En la actualidad estoy haciendo el curso
+       de Desarrollo Web con <em>Next U</em>. Tengo disponibilidad total .
+      </p>
+    <h4>Idiomas</h4>
+     <ul>
+      <li>Español: Hablo, comprendo y escribo</li>
+      <li>Inglés: Comprendo </li>
+    </ul>
+  <footer>Derechos Reservados - Juan Carlos Londoño Blandón -  Calle 99 35 a 02 Manizales ( Caldas ) -  Tel 300 203 0172 - (036) 879 9951 - Email: lonblan6@gmail.com
+  </footer>
+ </body>
 </html>
