--- a/experiencia.html
+++ b/experiencia.html
@@ -13,13 +13,15 @@
       <svg width="200" height="150" viewport="0  0 150 150">
         <image xlink:href="img/logo_juan.svg" width="200px" height="200px" x="0" y="0"</image>
       </svg>
-      <h1>Hoja de Vida </h1>
-      <br/>
-      <h2>Datos Personales:</h2>
-      <h3>Nombre: Juan Carlos Londoño Blandón</h3>
-      <h3>Fecha de Nacimiento: Manizales - Caldas, 25 de Octubre de 1964</h3>
+       <h1>Hoja de Vida </h1>
+       <br/>
+       <h2>Datos Personales:</h2>
+       <h3>Nombre: Juan Carlos Londoño Blandón</h3>
+       <h3>Fecha de Nacimiento: Manizales - Caldas, 25 de Octubre de 1964</h3>
    </header>
-   <p> <a href="index.html">Inicio</a> - <a href="educacion.html">Educación</a> - <a href="experiencia.html">Experiencia</a></p>
+    <p> <a href="index.html">Inicio</a> - <a href="educacion.html">Educación</a> - <a href="experiencia.html">Experiencia</a>
+    </p>
+       <h2>Experiencia</h2>
 
 
   </body>
