--- a/educacion.html
+++ b/educacion.html
@@ -60,14 +60,14 @@
      </tr>
      <tr>
        <td>2.020</td>
-       <td>Next U/td>
+       <td>Next U</td>
        <td>Manizales</td>
-       <td>En Cu</td>
+       <td>En Curso</td>
      </tr>
    </table>
    <h3>Agregar Estudios</h3>
-   <form action="mailto:lonblan6@gmail.com" method="post">
-     <label for="Año">Año: </label>
+   <form action="" method="post">
+     <label for="Año" type="text">Año: </label>
      <select>
        <option>2.013</option>
        <option>2.014</option>
@@ -80,13 +80,13 @@
      </select>
       </br>
       </br>
-     <label for="Institucion">Institución : </label><input type="text" id="Institucion">
+     <label for="Institucion">Institución : </label><input type="text" id="Institucion" name="Institucion" required>
       </br>
       </br>
-     <label for="Lugar">Lugar : </label><textarea name="name" rows="2" cols="30"></textarea>
+     <label for="Lugar">Lugar : </label><textarea name="lugar" rows="2" cols="30"></textarea>
       </br>
       </br>
-    <input type="submit" value="Enviar">
+     <input type="submit" value="Enviar">
 
 
    </form>
@@ -99,5 +99,5 @@
     </br>
     </br>
 
-</body>
+ </body>
 </html>
