--- a/index.html
+++ b/index.html
@@ -26,13 +26,15 @@
     <p><img src="img/perfil_juan.png" alt="fotoperfil_juan" title="Foto perfil Juan Carlos"></p>
       </br>
      <h3>Perfil</h3>
-      <p>Me concidero una persona seria y responsable. Me gusta mucho el continuo aprendisaje porque esto me ayuda
+      <p>Me concidero una persona seria y responsable. Me gusta mucho el continuo aprendizaje porque esto me ayuda
        a superar mis metas tanto laborales como personales. En este momento me encuentro en búsqueda de empleo
-       en el sector del <strong>Desarrolo y diseño Web</strong>. Tengo experiencia en el caso del segundo y estoy reforzando mis conocimientos
-       de Desarrolo. También me desempeño en el campo del <strong>Diseño Web y diseño Gráfico</strong>. En la actualidad estoy haciendo el curso
-       de Desarrollo Web con <em>Next U</em>. Tengo disponibilidad total .
+       en el sector del <strong>Desarrolo y diseño Web, aunque laboro como administrador de un negocio familiar</strong>.
+       Tengo experiencia en el caso del segundo y estoy reforzando mis conocimientos
+       de Desarrollo. También me desempeño en el campo del <strong>Diseño Web y diseño Gráfico</strong>. En la actualidad
+       estoy haciendo el curso
+       de Desarrollo Web con <em>Next U</em>. Tengo disponibilidad total.
       </p>
-    <h4>Idiomas</h4>
+     <h4>Idiomas</h4>
      <ul>
       <li>Español: Hablo, comprendo y escribo</li>
       <li>Inglés: Comprendo </li>
