--- a/experiencia.html
+++ b/experiencia.html
@@ -22,7 +22,23 @@
     <p> <a href="index.html">Inicio</a> - <a href="educacion.html">Educación</a> - <a href="experiencia.html">Experiencia</a>
     </p>
        <h2>Experiencia</h2>
+       <h3>Video</h3>
 
+         <video controls autoplay poster="" width="300px">
+           <source src="media/video_presentacion.mp4" type="video/mp4">
+           <source src="media/video_presentacion.avi" type="video/avi">
+           <source src="media/video_presentacion.mov" type="video/mov">
+             Tu navegador no soporta ninguno de los videos
 
-  </body>
+         </video>
+         <br/>
+         <h3>Audio</h3>
+
+         <audio controls>
+           <source src="audios/audio_proyecto1.mp3" type="audio/mp3">
+           <source src="audios/audio_proyecto1.aiff" type="audio/aiff">
+           <source src="audios/audio_proyecto1.wav" type="audio/wav">
+             Tu navegador no soporta ninguno dd los audios
+         </audio>
+    </body>
 </html>
